--- a/contact-me.html
+++ b/contact-me.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 
 <html>
 <!--title-->
@@ -55,7 +54,7 @@
 <td><a href="index.html"><h1 color=white style="margin-right:10px">Home</h1></a></td>
 <td><a href="Page2.html"><h1 color=white style="margin-right:10px">Hobbies</h1></a></td>
 <td><a href="page3.html"><h1 color=white style="margin-right:10px">Resume</h1></a></a></td>
-<td><a href="contact me.html"><h1 color=white style="margin-right:10px">Contanct Me</h1></a></a></td>
+<td><a href="contact-me.html"><h1 color=white style="margin-right:10px">Contanct Me</h1></a></a></td>
 
 </tr>
 </table>
