--- a/Page2.html
+++ b/Page2.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <!--title-->
 <head>
@@ -19,7 +18,7 @@
 <td><a href="index.html"><h1 color=white>Home</h1></a></td>
 <td><a href="Page2.html"><h1 color=white>Hobbies</h1></a></td>
 <td><a href="Page3.html"><h1 color=white>Resume</h1></a></td>
-<td><a href="contact me.html"><h1 color=white>Contanct Me</h1></a></a></td>
+<td><a href="contact-me.html"><h1 color=white>Contanct Me</h1></a></a></td>
 
 </tr>
 </table>
