--- a/Hobbies.html
+++ b/Hobbies.html
@@ -16,7 +16,7 @@
 <table border=1>
 <tr>
 <td><a href="index.html"><h1 color=white>Home</h1></a></td>
-<td><a href="Hobbies".html"><h1 color=white>Hobbies</h1></a></td>
+<td><a href="Hobbies.html"><h1 color=white>Hobbies</h1></a></td>
 <td><a href="Page3.html"><h1 color=white>Resume</h1></a></td>
 <td><a href="contact-me.html"><h1 color=white>Contanct Me</h1></a></td>
 
