--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,7 +7,7 @@
 <!--end of title-->
 <hr>
 <!--background-->
-<body background="image/background.jpg" width=100%>
+<body background="Image/background.jpg" width=100%>
 <font color=white>
 <!--end of background-->
 
@@ -28,15 +28,15 @@
 <!--hobbies-->
 <table border=1>
 <tr>
-<td ><img src="image/sketch.jpg" width="400" height="200"</img>
+<td ><img src="Image/sketch.jpg" width="400" height="200"</img>
 <p>I like to sketch in my free time.</p></td>
-<td><img src="image/soccer.jpg" width="400" height="200"</img><p>Like to improve my skills.</p</td>
-<td><img src="image/guitar.jpg" width="400" height="200"</img><p>I enjoy playing my guitar</p</td>
+<td><img src="Image/soccer.jpg" width="400" height="200"</img><p>Like to improve my skills.</p</td>
+<td><img src="Image/guitar.jpg" width="400" height="200"</img><p>I enjoy playing my guitar</p</td>
 </tr>
 
 <tr>
-<td><img src="image/piano.jpg" width="400" height="200"</img><p>I like to play piano to free my mind when I am stressed.</p</td>
-<td><img src="image/cycle.jpg" width="400" height="200"</img><p>Cycling is good exercise for good health.</p</td>
+<td><img src="Image/piano.jpg" width="400" height="200"</img><p>I like to play piano to free my mind when I am stressed.</p</td>
+<td><img src="Image/cycle.jpg" width="400" height="200"</img><p>Cycling is good exercise for good health.</p</td>
 <td><img src="Hobby.jpg" width="400" height="200"</img><p>i love singing songs</p</td>
 </tr>
 <!--end of hobbies-->
