--- a/contact-me.html
+++ b/contact-me.html
@@ -11,7 +11,7 @@
 <hr>
 
 <!--background-->
-<body background="image/green.jpg" width=100%>
+<body background="Image/green.jpg" width=100%>
 <!--end of background-->
 
 <!--table for info-->
