--- a/Hobbies.html
+++ b/Hobbies.html
@@ -37,7 +37,7 @@
 <tr>
 <td><img src="Image/piano.jpg" width="400" height="200"</img><p>I like to play piano to free my mind when I am stressed.</p</td>
 <td><img src="Image/cycle.jpg" width="400" height="200"</img><p>Cycling is good exercise for good health.</p</td>
-<td><img src="Hobby.jpg" width="400" height="200"</img><p>i love singing songs</p</td>
+<td><img src="Image/Hobby.jpg" width="400" height="200"</img><p>i love singing songs</p</td>
 </tr>
 <!--end of hobbies-->
 
